# ping-cap-talent-plan

bb2/: Cargo.toml  move.bson  move.ron
kvs1/: Cargo.toml
kvs1/src/: lib.rs
kvs1/tests/: tests.rs
