[package]
name = "kvs"
version = "0.1.0"
authors = ["Samuel J Vanderwaal <samuel.vanderwaal@gmail.com>"]
edition = "2018"
description = "Creates simple key-value database in memory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
